log/build_2023-07-11_08-02-14/offset_prediction_model/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/spider/gwpspider_ws/install/offset_prediction_model/lib/python3.10/site-packages/offset_prediction_model/offset_predictor.py", line 14
    self.prediction_model = 
                            ^
SyntaxError: invalid syntax

